dark mode color fix

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h6 {
 }
 
 .towhite{
-    color: rgb(0, 0, 0);
+    color: rgb(25, 25, 25);
 }
 
 .toblack{
